@@ -12,7 +12,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Entity
 @AllArgsConstructor
@@ -98,7 +97,7 @@ public class ProductPost {
                         .productPost(this)
                         .category(category)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         this.productCategories.addAll(productCategories);
     }
